objects/ValidationMethodsByChannel__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AdjuntarDocumentacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjuntar documentacion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineaDecisora__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linea Decisora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q&amp;A</label>
        <type>Checkbox</type>
    </fields>
    <label>Validation methods by channel</label>
    <listViews>
        <fullName>All_values</fullName>
        <columns>NAME</columns>
        <columns>AdjuntarDocumentacion__c</columns>
        <columns>LineaDecisora__c</columns>
        <columns>QA__c</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All values</label>
        <language>en_US</language>
    </listViews>
</CustomObject>